--- a/pages/index/index.qss
+++ b/pages/index/index.qss
@@ -18,5 +18,6 @@ page {
 background-size: 15px 15px, 15px 15px, 75px 75px, 75px 75px;
 }
 .cu-card {
-    padding: 18rpx
+    padding: 18rpx;
+    opacity: 0.95
 }
