--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -21,10 +21,16 @@
         <text class="text-grey">关于理里表白墙</text>
       </view>
     </view>  
-    <view class="cu-item arrow">
-      <button class="cu-btn content" open-type="feedback">
+    <view class="cu-item arrow" bindtap="showModal" data-target="advice">
+      <button class="cu-btn content">
         <text class="cuIcon-writefill text-cyan"></text>
-        <text class="text-grey" bindtap="showModal" data-target="advice">意见反馈</text>
+        <text class="text-grey">意见反馈</text>
+      </button>
+    </view> 
+    <view class="cu-item arrow" bindtap="addToDesk">
+      <button class="cu-btn content">
+        <image src="{{ saveToDeskImg }}" class="png" mode="aspectFit"></image>
+        <text class="text-grey">添加到桌面</text>
       </button>
     </view> 
   </view>
@@ -42,4 +48,23 @@
       一只奔跑ing的墙~
     </view>
   </view>
-</view>
+  </view>
+
+   <view class="cu-modal {{modalName=='advice'?'show':''}}">
+  <view class="cu-dialog">
+    <view class="cu-bar bg-white justify-end">
+      <view class="content">意见反馈</view>
+      <view class="action" bindtap="hideModal">
+        <text class="cuIcon-close text-red"></text>
+      </view>
+    </view>
+    <view class="padding-xl">
+      <view class="cu-form-group"> 
+		  <input placeholder="" data-field="advice" bindinput="formInputChange" ></input>
+	    </view>
+      <view class="padding flex flex-direction">
+  		<button class="cu-btn bg-grey lg" bindtap="mySubmit">提交          </button> 
+	    </view> 
+    </view>
+  </view>
+  </view>
